--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "md-links",
   "version": "0.1.0",
+  "description": "Projeto 4 da Laboratoria - Md Links",
+  "keywords": [
+    "node",
+    "markdown",
+    "CLI",
+    "API"
+  ],
+  "author": "Izadora Santos Nascimento <IzadoraNascimento>",
+  "license": "MIT",
   "engines": {
     "node": ">=16.x"
   },
@@ -8,5 +17,27 @@
     "createdAt": "2023-03-30T13:20:37.337Z",
     "version": "5.6.0",
     "commit": "ffa75c8b2bede153844195479abeff01f3e34227"
-  }
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
+  },
+  "dependencies": {
+    "chalk": "^5.2.0",
+    "eslint": "^8.40.0"
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IzadoraNascimento/SAP009-md-links.git"
+  },
+  "bugs": {
+    "url": "https://github.com/IzadoraNascimento/SAP009-md-links/issues"
+  },
+  "homepage": "https://github.com/IzadoraNascimento/SAP009-md-links#readme"
 }
